# compiler_project

./: CMakeLists.txt  README.md
examples/: code1.txt  code2.txt  code3.txt
src/: main.cpp  uml_diagram.txt
src/LLVM/: BuildBasic.cpp  BuildBasic.h
src/lexer/: Lexer.cpp  Lexer.h  Token.h
src/parser/: AST.cpp  AST.h  Parser.cpp  Parser.h
